Add styling and logo to page

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/question-answer-board.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link href="img/favicon.icon.png" rel="shortcut icon" type="image/x-icon">
 
     {{content-for "head-footer"}}
   </head>
